# Analysis-service-LLM-YOLO.

./: .env.template  README.md  docker-compose.yaml  pyproject.toml  ruff.toml  test_img.base_64.txt
app/: Dockerfile  Makefile  alembic.ini  config.py  entrypoint.sh  log_settings.py  main.py
app/api/: yolo.py
app/db/: database.py
app/db/dao/: base.py  logs.py
app/db/repositories/: logs.py
app/di/: __init__.py  db_session.py  llm.py  logger_di.py  logs_dao.py  use_cases.py  yolo.py
app/domain/entities/: logs.py
app/domain/repositories/: logs.py
app/migrations/: env.py
app/migrations/versions/: 80ce96c01347_init.py
app/models/: logs.py
app/schemas/: messages.py
app/services/: llm.py  yolo.py
app/use_cases/: analyze_img.py
