[project]
name = "analysis-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "fastapi[all]>=0.116.1",
    "httpx[socks]>=0.28.1",
    "langchain>=0.3.26",
    "langchain-openai>=0.3.27",
    "langgraph>=0.5.2",
    "ruff>=0.12.3",
    "sqlalchemy>=2.0.41",
    "ultralytics>=8.3.166",
]
